--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    <h1>My Website</h1>
-    <p>This website is being created as part of a <a href="https://prelude.tech">Prelude</a> Getting Git workshop.</p>
+    <h1>Hey, I'm Nyambe!</h1>
+    <p> I enjoy game development, Movies and anything pyschology <a href="https://prelude.tech">Prelude</a> Getting Git workshop.</p>
 </body>
 
 </html>
